--- a/src/components/Button/_style.scss
+++ b/src/components/Button/_style.scss
@@ -1,4 +1,4 @@
-.btn {
+.limuen-btn {
     position: relative;
     display: inline-block;
     font-weight: $btn-font-weight;
@@ -25,28 +25,28 @@
     }
 }
 
-.btn-lg {
+.limuen-btn-lg {
     @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $btn-font-size-lg, $btn-border-radius-lg);
 }
 
-.btn-sm {
+.limuen-btn-sm {
     @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm, $btn-border-radius-sm);
 }
 
 
-.btn-primary {
+.limuen-btn-primary {
     @include button-style($primary, $primary, $white)
 }
 
-.btn-danger {
+.limuen-btn-danger {
     @include button-style($danger, $danger, $white)
 }
 
-.btn-default {
+.limuen-btn-default {
     @include button-style($white, $gray-400, $body-color, $white, $primary, $primary)
 }
 
-.btn-link {
+.limuen-btn-link {
     font-weight: $font-weight-normal;
     color: $btn-link-color;
     text-decoration: $link-decoration;
