--- a/src/components/Menu/_style.scss
+++ b/src/components/Menu/_style.scss
@@ -63,7 +63,7 @@
     }
 
     .limuen-submenu {
-        //display: none;
+        display: none;
         list-style: none;
         padding-left: 0;
         white-space: nowrap;
@@ -81,9 +81,13 @@
             }
         }
     }
+
+    .limuen-submenu.menu-opened {
+        display: block;
+    }
 }
 
-.menu-horizontal {
+.limuen-menu-horizontal {
     >.limuen-menu-item {
         border-bottom: $menu-item-active-border-width solid transparent;
     }
