--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,12 +13,12 @@
 
 @import "../components/Button/style";
 
-// // menu
+// menu
 
 @import "../components/Menu/style";
 
-// // icon
-// @import "../components/Icon/style";
+// icon
+@import "../components/Icon/style";
 
 // //input
 // @import "../components/Input/style";
