--- a/src/components/Menu/_style.scss
+++ b/src/components/Menu/_style.scss
@@ -63,27 +63,24 @@
     }
 
     .limuen-submenu {
-        display: none;
+        // display: none;
         list-style: none;
         padding-left: 0;
         white-space: nowrap;
-
         //transition: $menu-transition;
         .limuen-menu-item {
             padding: $menu-item-padding-y $menu-item-padding-x;
             cursor: pointer;
             transition: $menu-transition;
             color: $body-color;
-
-            &.is-active,
-            &:hover {
-                color: $menu-item-active-color !important;
+            &.is-active, &:hover {
+              color: $menu-item-active-color !important;
             }
         }
     }
 
     .limuen-submenu.menu-opened {
-        display: block;
+        // display: block;
     }
 }
 
