--- a/src/components/Menu/_style.scss
+++ b/src/components/Menu/_style.scss
@@ -39,7 +39,7 @@
         }
 
         .arrow-icon {
-            transition: transform .3s ease-in-out;
+            transition: transform .25s ease-in-out;
             margin-left: 3px;
         }
 
@@ -63,18 +63,21 @@
     }
 
     .limuen-submenu {
-        // display: none;
+        //display: none;
         list-style: none;
         padding-left: 0;
         white-space: nowrap;
+
         //transition: $menu-transition;
         .limuen-menu-item {
             padding: $menu-item-padding-y $menu-item-padding-x;
             cursor: pointer;
             transition: $menu-transition;
             color: $body-color;
-            &.is-active, &:hover {
-              color: $menu-item-active-color !important;
+
+            &.is-active,
+            &:hover {
+                color: $menu-item-active-color !important;
             }
         }
     }
